--- a/index.html
+++ b/index.html
@@ -667,9 +667,9 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Liên Hệ</h3>
-                <p><i class="fas fa-map-marker-alt"></i> 123 Đường Thời Trang, Quận 1, TP.HCM</p>
-                <p><i class="fas fa-phone"></i> (028) 1234 5678</p>
-                <p><i class="fas fa-envelope"></i> info@fashionbrand.vn</p>
+                <p><i class="fas fa-map-marker-alt"></i> 503 Hà Huy Giáp, Quận , TP.HCM</p>
+                <p><i class="fas fa-phone"></i> (+84) 388212718</p>
+                <p><i class="fas fa-envelope"></i> ngocduonggl81@gmail.com</p>
             </div>
             
             <div class="footer-section">
@@ -936,4 +936,5 @@
         }
     </script>
 </body>
+
 </html>
