--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Liên Hệ</h3>
-                <p><i class="fas fa-map-marker-alt"></i> 503 Hà Huy Giáp, Quận , TP.HCM</p>
+                <p><i class="fas fa-map-marker-alt"></i> 503 Hà Huy Giáp, Quận 12, TP.HCM</p>
                 <p><i class="fas fa-phone"></i> (+84) 388212718</p>
                 <p><i class="fas fa-envelope"></i> ngocduonggl81@gmail.com</p>
             </div>
@@ -938,3 +938,4 @@
 </body>
 
 </html>
+
